--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<
+<!DOCTYPE html> 
+<html lang="en"> 
+<head> 
+  <title> Project BlackJack </title> 
+  <meta charset="UTF-8"/>
+  <style> 
+    
+</head>
+<body> 
+  <h1> Project BlackJack </h1> 
+  <p> 
+</body> 
+</html>
